# CostPilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  azure_retail_pricing_knowledge.py  discover_services.py  pyproject.toml  retail_pricing_knowledgepack.py
artifacts/: azure_price_cache.json  debug_plan_raw.json  debug_scoring.jsonl
azure_cost_architect/: __init__.py  azure_price_cache_s1.json  build_catalog.py  build_sku_alias_index.py  catalog_audit.py  cli.py  config.py  debug_enriched.json  debug_report_raw.md  prompts.py
catalog/: application_gateway__westeurope__EUR.jsonl  application_gateway__westeurope__USD.jsonl  azure_app_service__westeurope__EUR.jsonl  azure_app_service__westeurope__USD.jsonl  azure_bastion__westeurope__EUR.jsonl  azure_bastion__westeurope__USD.jsonl  azure_cosmos_db__westeurope__EUR.jsonl  azure_data_factory__westeurope__EUR.jsonl  azure_data_factory__westeurope__USD.jsonl  azure_database_for_mysql__westeurope__EUR.jsonl  azure_database_for_postgresql__westeurope__EUR.jsonl  azure_databricks__westeurope__EUR.jsonl  azure_databricks__westeurope__USD.jsonl  azure_firewall__westeurope__EUR.jsonl  azure_site_recovery__westeurope__USD.jsonl  backup__westeurope__EUR.jsonl  backup__westeurope__GBP.jsonl  backup__westeurope__USD.jsonl  bandwidth__eastus__USD.jsonl  bandwidth__westeurope__GBP.jsonl  bandwidth__westeurope__USD.jsonl  expressroute__westeurope__EUR.jsonl  key_vault__westeurope__GBP.jsonl  key_vault__westeurope__USD.jsonl  log_analytics__westeurope__GBP.jsonl  log_analytics__westeurope__USD.jsonl  (+13 more)
(+186 files in other folders)
